# RustCode

./: .gitignore  README.md  Rust2发展.md
.obsidian/: app.json  appearance.json  hotkeys.json  workspace.json
AwaitTree/: Cargo.toml
AwaitTree/src/: main.rs  test.rs
BTC/: Cargo.toml  readme.md
BTC/.obsidian/: app.json  workspace.json
BTC/src/: main.rs
C_lang/: 配置环境.md
C_lang/C/: Makefile
C_lang/C++/: Makefile
Cross-platformGUI/: readme.md
Cross-platformGUI/Rerun/: readme.md
Cross-platformGUI/Sycamore/: readme.md
Cross-platformGUI/tauri/: readme.md
Embedded/: Oxide.md  嵌入式副业.md  嵌入式开发环境.md  遇到的坑.md
Embedded/ArielOS/: readme.md
Embedded/ESP32/: readme.md
Embedded/Future/: AGI时代.md  亚毫秒定时分辨率的RTOS新方法.md
Embedded/seL4/: readme.md
TEST/: Datadog.md  readme.md
ai/: Burn.md  Candle.md  Fastnum.md  HF-Hub .md  Linfa.md  NdArray.md  SmartCore.md  chili.md  luminal.md  mistral.md  multicalc-rust.md  readme.md  rustNLP.md  simd加速迭代器.md  symbolica.md  tch-rs.md
asset-bundler/: readme.md
autoVerification/: readme.md
bigProject/: Cargo.toml  Makefile  build.rs  readme.md
bigProject/crates/package1/: Cargo.toml
bigProject/crates/package2/: Cargo.toml
bugs/: 10个常见RUST生命周期.md  Eq与PartialEq两种Trait.md  Rust中Trait的关联类型和自动实现.md  readme.md  区分可变引用和可变变量.md  隐藏的变量不会被销毁.md
cloud/: Balter.md  BiTE.md  Maelstrom.md  Ruserf.md  dust-dds.md  easyTier内网穿透.md  governor.md  oha压测.md  proxyfor.md  ptrace.md  readme.md  rlt压测.md  rs-docker容器解密.md
cloud/otlp-example/: Cargo.toml  readme.md
cloud/otlp-example/src/: main.rs
cursive_example/: Cargo.toml  readme.md
editCLI/: .env  Cargo.toml  Zed.md  readme.md
editCLI/src/: db.rs  handler.rs  main.rs  utils.rs
egui_graphs_example/: Cargo.toml  readme.md
func/: Cargo.toml  readme.md
func/src/: main.rs
function_benchmark_macro/: Cargo.toml
futuresUnordered/: Cargo.toml  readme.md
gameEngine/: DoarSSR.md  Kira.md  bevy.md  readme.md
learning/: Cargo.toml  readme.md
learning/pkgs/: Cargo.toml
learning/pkgs/Horizontal_reference/: Cargo.toml
learning/pkgs/Horizontal_reference/src/: a.rs  abfolder.rs  b.rs  main.rs
learning/pkgs/Horizontal_reference/src/abfolder/: c.rs  d.rs
learning/pkgs/myLibrary/: Cargo.toml
learning/pkgs/myLibrary/src/: lib.rs
learning/pkgs/src/: a.rs  b.rs  main.rs  myModule.rs  pubVisibleModifier.rs  sonModule1.rs
learning/pkgs/src/sonModule/: mod.rs  sub_module.rs
learning/pkgs/src/sonModule1/: son.rs
learning/src/: Trait和泛型的高级用法.md  asyncio.rs  branch.rs  coll.rs  const.rs  dataType.rs  emum.rs  enums.rs  function.rs  game.rs  keywords.rs  main.rs  ownership.rs  referenceBorrowing.rs  structure.rs  variablesVariability.rs
learning/src/2025/: Rust1.86.0发布.md  newCharacteristic.rs  只用一行代码，就可以破坏Rust的内存安全.md
learning/src/Box/: readme.md
learning/src/OOM/: RALL.md  cveRS.md  readme.md  导致Rust内存泄漏的4种情况及如何修复.md  异构.md  有问题的数据引发内存读取越界.md
learning/src/Zero-cost-abstraction/: readme.md
learning/src/asyncNote/: bridgeTest.rs  readme.md  异步 Rust —— 争议不断的主题.md  编写异步运行时库.md
learning/src/closure/: demo.md
learning/src/coll/: hashmaps.rs  strings.rs  vectors.rs
learning/src/dataProcessing/: Arroyo.rs  Fluvio.rs  Lance.rs  Lancedb.rs  Linfa.rs  Polars.rs  Qdrant.rs  Surrealdb.rs  sail.rs  serialization.rs
learning/src/datetime/: useDTT.rs
learning/src/derive-with/: demo.md
learning/src/designMode/: observable.rs
learning/src/errors/: 如何在大型Rust项目中设计错误处理.md
learning/src/init_lazy/: readme.md
learning/src/items/: demo.rs
learning/src/newLog/: main_1_77_0.rs
learning/src/objInfo/: demo.rs  readme.md.md  template.rs
learning/src/optimalPerformance/: AlgorithmsAndDataStructures.rs  analyse.rs  cache.rs  count.rs  cpu.rs  memory.rs
learning/src/quote/: 引用.md
learning/src/rwFile/: fileCopy.rs  readme.md
learning/src/self&Self/: readme.md
learning/src/sharedOwnership/: demo.rs
learning/src/tips/: dereference.rs  deriveWith.rs  hashmap_insert.rs  rule.rs
learning/src/updateLog/: 1_75_0.rs
letterTools/: Brioche.md  Copycolors.md  EmbedAnything.md  Nushell.md  Rathole.md  RustCUPP.md  Trait边界.md  gitoxide.md  readme.md  sniffnet网络监控.md  图片.md  媒体解码.md  手动hashmap.md  跨平台屏幕捕获.md
machine_learning/: readme.md
machine_learning/machine_learning_linfa/: Cargo.toml
machine_learning/machine_learning_linfa/src/: diabetes_file.csv  main.rs
midi-rs/: Cargo.toml
midi-rs/src/: main.rs
mobile_learning/: slint.md
pinProject/: Cargo.toml  readme.md
pnet_interface/: Cargo.toml
real-ime-message/: Cargo.toml  readme.md
restaurant/: Cargo.toml
rust-signal-handling/: Cargo.toml  readme.md
rustgrpc/: Cargo.toml
rustgrpc/protos/: hello.proto
rustgrpc/src/: main.rs
shell/: Tabiew.md  fish-shell.md
showFolder/: Cargo.toml
shrimp_engine/: Cargo.toml
snapshoot/: Cargo.toml
snapshoot/src/: main.rs
sql/: Fluxus.md  ORM库.md  SableDb.md  memds.md  readme.md
test_macro/: Cargo.toml
threadPool/: Cargo.toml  readme.md
thread_adv/: Cargo.toml
tokioLearning/: Cargo.toml  Kameo.md
tokioLearning/Dagrs/: readme.md
tokioLearning/restaurant/: Cargo.toml
tokioLearning/restaurant/src/: main.rs
tokioLearning/src/: fileDeom.rs  main.rs
tokioLearning/tokio-cores-example/: Cargo.toml
tokioLearning/tokio-cores-example/src/: main.rs
wasm-example/: Cargo.toml  Wasmi.md  readme.md
webFramework/: readme.md
webFramework/api-rate-limiting/: Cargo.toml  readme.md
webFramework/api-rate-limiting/src/: main.rs
webFramework/webtransport-example/: Cargo.toml  cert.pem  key.pem  readme.md
webServer/: Cargo.toml  readme.md
webServer/p2p/: Cargo.toml
webServer/p2p/src/: main.rs
应用方向/: C++特性.md  Cell共享可变引用.md  C编译器.md  Discord.md  DragonOS.md  Rust编程范式.md  ZED代码编辑器.md  build速度.md  ctreg.md  c与rust内存优化.md  future线程传递.md  go的并发模型.md  hawkeye.md  oss_pipe.md  pickleDB.md  readme.md  rust的物权法.md  从语法到构建软件.md  代码覆盖率.md  信号处理.md  共享目录.md  加密库.md  反模式.md  同步原语.md  多核并行处理.md  孤儿规则.md  实时无人机数据传输.md  常见陷阱.md  攻防渗透.md  数据可视化.md  构建SaaS.md  枚举表示状态.md  特斯拉汽车.md  生命周期.md  编译器.md  自动commit提交.md  诊断特性.md  重写基础软件.md  零知识证明：支付场景中的 Rust 实现.md  面试题.md
(+184 files in other folders)
