[package]
name = "func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



# cargo
# [target."cfg(not(target_os = "macos"))".dependencies]
# some-crate = "0.53.1"

# [target."cfg(target_os = "macos")".dependencies]
# some-crate-macos-patch = { git = "https://github.com/some-org/some-crate", branch = "macos-patch" }