# !这里是cargo.toml的包管理器，类似npm package.json package-lock.json

# 包元信息
[package]
name = "learning"
version = "0.1.0"
edition = "2021"
[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 依赖库
[dependencies]
ferris-says = "0.3.1"
# 随机数包
rand = "0.8.5"
# 异步函数
reqwest = "0.12.4"
serde_json = "1.0.109"
tokio = {version = "1.35.1", features = ["full"]}


# 改变代码检查等级
# [lints.rust]
# unsafe_code="forbid"
# [lints.clippy]
# enum_global_use="deny"