[package]
name = "midi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
itertools = "0.12.1"
phf = { version = "0.11", features = ["macros"] }
rustysynth = "1.3.1"
tinyaudio = "0.1.3"


# eframe：EGUI框架——编写可以编译为web或本机的GUI应用程序
# itertools：扩展的迭代器适配器、函数和宏。
# phf：使用完美的散列函数在编译时生成高效的查找表。
# rustysynth：用纯Rust编写的MIDI 音色库合成器
# tinyaudio：是一个跨平台，易于使用，底层的音频输出库。
# 这个应用程序将打开一个接收键盘事件的egui窗口，这些事件被发送到rustysynth库作为midi音符并通过tinyaudio库输出声音。

