[package]
name = "webtransport-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", default-features = false, features = ["macros", "rt-multi-thread"] }
wtransport = {version = "0.1.8", features = ["dangerous-configuration"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
wtransport-proto = "0.1.8"
base64 = "0.21.0"
rcgen = "0.11.1"
ring = "0.17.0"
time = "0.3.21"