[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
clap={version="4.5.13",features=["derive"]}
env_logger="0.11.5"
futures="0.3.30"
log="0.4.22"
serde="1.0.204"
tokio={version="1.39.2",features=["full"]}
tokio-tungstenite="0.23.1"
tokio-util={version="0.7.11",features=["full"]}